Написал разметку главной страницы

--- a/index.html
+++ b/index.html
@@ -1,12 +1,131 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="fonts/ptsans.woff2">
+</head>
 
-  </body>
+<body>
+
+  <header class="main-header">
+
+    <nav>
+      <a href=""><img src="https://via.placeholder.com/138x70" alt="Логотип сайта города Седона"></a>
+      <ul>
+        <li><a href="">Информация</a></li>
+        <li><a href="">Фото и видео</a></li>
+        <li><a href="">Карта штата</a></li>
+        <li><a href="hotels.html">Гостиницы</a></li>
+      </ul>
+    </nav>
+
+  </header>
+
+  <main>
+    <h1>Поиск жилья в городе Седона</h1> <!-- Скрыть главный заголовок -->
+
+    <section class="about">
+      <p>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+    </section>
+
+    <section class="reason-1">
+      <h2>Настоящий <br> городок</h2>
+      <p>-№1-</p>
+      <p>Седона - не аттракцион для туристов, там<br>
+        течёт своя жизнь</p>
+      <!-- Добавить изображение через background-image, т.к изображение является стилистическим -->
+    </section>
+
+    <section class="advantages">
+      <ul class="advantages-list">
+
+        <li class="advantages-home">
+          <!-- Иконка добавляется в стилях т.к без нее не теряется смысл, это просто дополнение -->
+          <h3>Жилье</h3>
+          <p>Рекомендуем пожить в настоящем <br> мотеле, всё как в кино!</p>
+        </li>
+
+        <li class="advantages-food">
+          <!-- Иконка добавляется в стилях т.к без нее не теряется смысл, это просто дополнение -->
+          <h3>Еда</h3>
+          <p>Всегда заказывайте фирменный бургер, <br> вы не разочаруетесь!</p>
+        </li>
+
+        <li class="advantages-souvenirs">
+          <!-- Иконка добавляется в стилях т.к без нее не теряется смысл, это просто дополнение -->
+          <h3>Сувениры</h3>
+          <p>Не только китайского, но и местного <br> производства!</p>
+        </li>
+
+      </ul>
+    </section>
+
+    <section class="reason-2">
+      <!-- Добавить изображение через background-image, т.к изображение является стилистическим -->
+      <h2>Там есть <br> мост дьявола</h2>
+      <p>-№2-</p>
+      <p>Да, по нему можно пройти! Если конечно <br> вы осмелитесь</p>
+    </section>
+
+    <section class="reason-last">
+      <ul class="reason-list">
+
+        <li class="reason-3">
+          <h2>Небольшая <br> площадь</h2>
+          <p>-№3-</p>
+          <p>все достопримечательности <br> находятся очень близко</p>
+        </li>
+
+        <li class="reason-4">
+          <h2>Красивая <br> дорога</h2>
+          <p>-№4-</p>
+          <p>ехать в седону из лас-вегаса совсем <br> не скучно!</p>
+        </li>
+
+        <li class="reason-5">
+          <h2>Мало <br> туристов</h2>
+          <p>-№5-</p>
+          <p>большинство едет в гранд каньон <br> и толпится там</p>
+        </li>
+
+      </ul>
+    </section>
+
+    <section class="interest">
+      <h3>Заинтересовались?</h3>
+      <p>Укажите предполагаемые даты поездки, <br>
+        и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <!-- Далее идет форма -->
+    </section>
+  </main>
+
+  <footer class="main-footer">
+    <!-- Добавить изображение через background-image, т.к изображение является стилистическим -->
+    <section>
+      <ul class="contact">
+
+        <li>#VISITSEDONA</li>
+        <li>ТЕЛ: +7(495) 666-01-66</li>
+
+      </ul>
+    </section>
+
+    <section>
+      <ul class="social">
+        <li><a href="">Twitter</a></li>
+        <li><a href="">Facebook</a></li>
+        <li><a href="">Youtube</a></li>
+      </ul>
+    </section>
+
+    <p>Website by</p>
+    <!-- Вставка лого HtmlAcademy -->
+  </footer>
+
+</body>
+
 </html>
